temporary fix to previewheading margin top alignment issues

--- a/src/components/workPage/portfolioPreview/portfolioPreview.css
+++ b/src/components/workPage/portfolioPreview/portfolioPreview.css
@@ -11,6 +11,8 @@
 }
 
 .previewBody {
+    padding-top: 30px;
+    padding-bottom: 30px;
     border-top: 1px solid grey;
     border-bottom: 1px solid grey;
     display: grid;
@@ -18,17 +20,25 @@
     grid-template-rows: 2fr 2fr 1fr;
 }
 
+
+
 .previewHeading {
     font-size: 62px;
     font-family: ChapLight;
-    grid-column: 2;
+    grid-column: 1 / span 2;
+    justify-self: end;
+    align-self: start;
     grid-row: 1;
+    margin-top: -20px;
+    
 }
 
 .previewImage {
+    margin-top: 0;
     grid-column: 1;
     grid-row: 1 / span 3;
     align-self: center;
+    justify-self: start;
 }
 
 .previewDescription {
@@ -37,14 +47,16 @@
     font-family: Arimo;
     font-size: 16px;
     width: 362px;
-    align-self: center;
-    justify-self: center;
+    align-self: end;
+    justify-self: end;
 }
 
 .previewLink {
     grid-column: 2;
     grid-row: 3;
     justify-self: end;
+    align-self: end;
     font-family: Arimo;
     font-size: 24px;
+    margin-top: 20px;
 }
